--- a/cart.html
+++ b/cart.html
@@ -817,7 +817,7 @@
         <div class="header-top">
             <h2>Lunsara</h2>
             <nav class="navbar">
-                <a href="index.html">Home</a>
+                <a href="homepage.html">Home</a>
                 <a href="cart.html" class="active-cart">
                     <span class="cart-icon-container">
                         <i class="fas fa-shopping-cart"></i>
@@ -922,7 +922,7 @@
         <div id="empty-cart-message">
             <h2>Your cart is empty!</h2>
             <p>Looks like you haven't added anything to your cart yet.</p>
-            <a href="index.html" class="continue-shopping">Continue Shopping</a>
+            <a href="homepage.html" class="continue-shopping">Continue Shopping</a>
         </div>
     </main>
 
