--- a/delivery-address.html
+++ b/delivery-address.html
@@ -571,7 +571,7 @@
         <div class="header-top">
             <h2>Lunsara</h2>
             <nav class="navbar">
-                <a href="index.html">Home</a>
+                <a href="homepage.html">Home</a>
                 <a href="cart.html" class="cart-nav-link cart-link">
                     <span class="cart-icon-container">
                         <i class="fas fa-shopping-cart"></i>
