--- a/order-tracking.html
+++ b/order-tracking.html
@@ -596,7 +596,7 @@
         <div class="header-top">
             <h2>Lunsara</h2>
             <nav class="navbar">
-                <a href="index.html">Home</a>
+                <a href="homepage.html">Home</a>
                 <a href="cart.html">Cart</a>
                 <a href="order-tracking.html" class="active">Orders</a>
             </nav>
@@ -784,7 +784,7 @@
                     <i class="fas fa-shopping-bag"></i>
                     <h3>No Orders Yet</h3>
                     <p>${message}</p>
-                    <a href="index.html" class="shop-now-btn">Continue Shopping</a>
+                    <a href="homepage.html" class="shop-now-btn">Continue Shopping</a>
                 </div>
             `;
         }
