--- a/product-detail.html
+++ b/product-detail.html
@@ -997,7 +997,7 @@
             <h2>Lunsara</h2>
 
             <nav class="navbar">
-                <a href="index.html">Home</a>
+                <a href="homepage.html">Home</a>
                 <a href="cart.html" class="cart-nav-link cart-link">
                     <span class="cart-icon-container">
                         <i class="fas fa-shopping-cart"></i>
