Update design changes three product pages

--- a/login.html
+++ b/login.html
@@ -573,6 +573,70 @@ p<!DOCTYPE html>
             .watermark-26 { top: 60%; left: 98%; }
             .watermark-27 { top: 30%; left: 30%; }
             .watermark-28 { top: 50%; left: 80%; }
+            .watermark-29 { top: 8%; left: 45%; }
+            .watermark-30 { top: 95%; left: 80%; }
+            .watermark-31 { top: 15%; left: 85%; }
+            .watermark-32 { top: 75%; left: 5%; }
+            .watermark-33 { top: 45%; left: 90%; }
+            .watermark-34 { top: 85%; left: 25%; }
+            .watermark-35 { top: 25%; left: 5%; }
+            .watermark-36 { top: 65%; left: 95%; }
+            .watermark-37 { top: 35%; left: 35%; }
+            .watermark-38 { top: 55%; left: 75%; }
+            .watermark-39 { top: 8%; left: 45%; }
+            .watermark-40 { top: 95%; left: 80%; }
+            .watermark-41 { top: 15%; left: 85%; }
+            .watermark-42 { top: 75%; left: 5%; }
+            .watermark-43 { top: 45%; left: 90%; }
+            .watermark-44 { top: 85%; left: 25%; }
+            .watermark-45 { top: 25%; left: 5%; }
+            .watermark-46 { top: 65%; left: 95%; }
+            .watermark-47 { top: 35%; left: 35%; }
+            .watermark-48 { top: 55%; left: 75%; }
+            .watermark-49 { top: 8%; left: 45%; }
+            .watermark-50 { top: 95%; left: 80%; }
+            .watermark-51 { top: 15%; left: 85%; }
+            .watermark-52 { top: 75%; left: 5%; }
+            .watermark-29 { top: 8%; left: 45%; }
+            .watermark-30 { top: 83%; left: 55%; }
+            .watermark-31 { top: 33%; left: 15%; }
+            .watermark-32 { top: 57%; left: 80%; }
+            .watermark-33 { top: 13%; left: 80%; }
+            .watermark-34 { top: 77%; left: 10%; }
+            .watermark-35 { top: 43%; left: 70%; }
+            .watermark-36 { top: 23%; left: 5%; }
+            .watermark-37 { top: 37%; left: 3%; }
+            .watermark-38 { top: 73%; left: 93%; }
+            .watermark-39 { top: 3%; left: 80%; }
+            .watermark-40 { top: 87%; left: 40%; }
+            .watermark-41 { top: 27%; left: 93%; }
+            .watermark-42 { top: 63%; left: 3%; }
+            .watermark-43 { top: 47%; left: 97%; }
+            .watermark-44 { top: 13%; left: 3%; }
+            .watermark-45 { top: 85%; left: 80%; }
+            .watermark-46 { top: 15%; left: 50%; }
+            .watermark-47 { top: 75%; left: 90%; }
+            .watermark-48 { top: 40%; left: 5%; }
+            .watermark-49 { top: 60%; left: 95%; }
+            .watermark-50 { top: 30%; left: 95%; }
+            .watermark-51 { top: 70%; left: 15%; }
+            .watermark-52 { top: 10%; left: 80%; }
+            .watermark-45 { top: 88%; left: 75%; transform: rotate(-25deg); }
+            .watermark-45::before { content: "EXQUISITE CRAFT"; }
+            .watermark-46 { top: 18%; left: 55%; transform: rotate(28deg); }
+            .watermark-46::before { content: "TRADITIONAL LOOM"; }
+            .watermark-47 { top: 78%; left: 85%; transform: rotate(-18deg); }
+            .watermark-47::before { content: "HANDWOVEN MAGIC"; }
+            .watermark-48 { top: 42%; left: 8%; transform: rotate(22deg); }
+            .watermark-48::before { content: "ARTISAN TOUCH"; }
+            .watermark-49 { top: 62%; left: 88%; transform: rotate(-12deg); }
+            .watermark-49::before { content: "TIMELESS WEAVE"; }
+            .watermark-50 { top: 32%; left: 88%; transform: rotate(15deg); }
+            .watermark-50::before { content: "PREMIUM THREADS"; }
+            .watermark-51 { top: 72%; left: 18%; transform: rotate(-28deg); }
+            .watermark-51::before { content: "HERITAGE CRAFT"; }
+            .watermark-52 { top: 12%; left: 75%; transform: rotate(35deg); }
+            .watermark-52::before { content: "MASTER WEAVERS"; }
         }
     </style>
 </head>
@@ -713,6 +777,46 @@ p<!DOCTYPE html>
         <div class="watermark-text watermark-26"></div>
         <div class="watermark-text watermark-27"></div>
         <div class="watermark-text watermark-28"></div>
+        <div class="watermark-text watermark-29"></div>
+        <div class="watermark-text watermark-30"></div>
+        <div class="watermark-text watermark-31"></div>
+        <div class="watermark-text watermark-32"></div>
+        <div class="watermark-text watermark-33"></div>
+        <div class="watermark-text watermark-34"></div>
+        <div class="watermark-text watermark-35"></div>
+        <div class="watermark-text watermark-36"></div>
+        <div class="watermark-text watermark-37"></div>
+        <div class="watermark-text watermark-38"></div>
+        <div class="watermark-text watermark-39"></div>
+        <div class="watermark-text watermark-40"></div>
+        <div class="watermark-text watermark-41"></div>
+        <div class="watermark-text watermark-42"></div>
+        <div class="watermark-text watermark-43"></div>
+        <div class="watermark-text watermark-44"></div>
+        <div class="watermark-text watermark-45"></div>
+        <div class="watermark-text watermark-46"></div>
+        <div class="watermark-text watermark-47"></div>
+        <div class="watermark-text watermark-48"></div>
+        <div class="watermark-text watermark-49"></div>
+        <div class="watermark-text watermark-50"></div>
+        <div class="watermark-text watermark-51"></div>
+        <div class="watermark-text watermark-52"></div>
+        <div class="watermark-text watermark-37"></div>
+        <div class="watermark-text watermark-38"></div>
+        <div class="watermark-text watermark-39"></div>
+        <div class="watermark-text watermark-40"></div>
+        <div class="watermark-text watermark-41"></div>
+        <div class="watermark-text watermark-42"></div>
+        <div class="watermark-text watermark-43"></div>
+        <div class="watermark-text watermark-44"></div>
+        <div class="watermark-text watermark-45"></div>
+        <div class="watermark-text watermark-46"></div>
+        <div class="watermark-text watermark-47"></div>
+        <div class="watermark-text watermark-48"></div>
+        <div class="watermark-text watermark-49"></div>
+        <div class="watermark-text watermark-50"></div>
+        <div class="watermark-text watermark-51"></div>
+        <div class="watermark-text watermark-52"></div>
     </div>
 
     <!-- Forgot Password Modal -->
